2005-03-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline) src/misc.c (parse_colorspec): 
	Clean up code to remove the remaining 2 compiler warnings in current cvs.

2005-03-05  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (PS_options): Patch #1121971. Avoid external 
	processing of escaped characters in the epslatex header string.

2005-03-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): Plug a memory leak caused by evaluating
	a string-valued expression inside a "using" specification.

	* configure.in /config/config.amg /config/config.cyg /config/config.mgw
	/config/config.os2 /src/eval.c /src/eval.h /src/internal.c
	/src/internal.h /src/parse.c /src/standard.c /src/standard.h:

	Remove configuration option --disable-defined-var.
	Remove the #ifdef GP_ISVAR ... #endif bracketing the corresponding code.

	* term/cgm.trm (CGM_linecolor): Force all line and point color requests
	to black if the terminal is in monochrome mode. Bug fix courtesy of 
	N Matsuda (Tokyo Denki University).

2005-03-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Introduce a defined constant MAX_TOKEN_LENGTH
	rather than trusting multiple call sites to declare consistently
	sized character arrays.

	* src/eval.c src/datafile.h src/datafile.c docs/gnuplot.doc:
	New internal function f_stringcolumn() usable only inside a "using"
	specification; pushes the content of a data column onto the evaluation
	stack as a string variable.
	Syntax:
	    plot 'foo' using (stringcolumn(1) eq "baz" ? column(2) : column(3))

	* src/datafile.c (df_readline df_3dmatrix df_readbinary):
	Set a flag to indicate that we are in the process of evaluating a
	"using" specification.

	* src/datafile.c (f_column f_timecolumn f_stringcolumn):
	Report an error if any of the <xxx>column() functions  are called
	outside the context of a "using" specification.

	* configure.in: Remove the "EXPERIMENTAL" warning from the histogram