@@ -46,6 +46,7 @@
 #define X11_GR_RELEASE_PALETTE  'e'
 #define X11_GR_SET_COLOR        'c'
 #define X11_GR_SET_RGBCOLOR     'g'
+#define X11_GR_SET_LINECOLOR    'l'
 #define X11_GR_FILLED_POLYGON   'f'
 #endif
 
