@@ -1,3 +1,11 @@
+2005-03-09  Ethan Merritt  <merritt@u.washington.edu>
+
+	* term/emf.trm term/gd.trm term/pdf.trm term/pm.trm term/post.trm
+	term/svg.trm term/x11.trm src/gplt_x11.c src/gplt_x11.h:
+	Modify term->set_color() to handle colorspec type LC_LT.
+	This has the effect of changing the current line color to that of default
+	linetype <lc> without changing any other line properties.
+
 2005-03-06  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (df_readline) src/misc.c (parse_colorspec): 
